# autonomy-stack

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
autonomy_stack/control/: controller.py
autonomy_stack/hardware/: camera.py  imu.py  motor.py  steering.py
autonomy_stack/localization/: pose.py
autonomy_stack/perception/: detection.py
autonomy_stack/planning/: planner.py
tests/: test_interfaces.py
