[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomy-stack"
version = "0.0.0"
description = "A small autonomous car: perception → localization → planning → control."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0"]
pi  = ["adafruit-circuitpython-pca9685>=3.4", "adafruit-circuitpython-bno055>=5.4"]

[tool.hatch.build.targets.wheel]
packages = ["autonomy_stack"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # error/pyflakes/imports/pyupgrade/bugbear

[tool.mypy]
python_version = "3.11"
strict = true
files = ["autonomy_stack", "tests"]

[[tool.mypy.overrides]]
module = ["cv2.*", "adafruit_pca9685.*", "adafruit_bno055.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
